<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.button.MaterialButton
    android:id="@+id/btnCalculator"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/calculator_button"
    app:icon="@drawable/baseline_calculate_24"
    app:iconGravity="top"
    app:iconPadding="8dp"
    android:gravity="center"
    android:padding="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintBottom_toTopOf="@+id/btnList"
    app:layout_constraintVertical_chainStyle="packed"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginTop="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_button"
        app:layout_constraintTop_toBottomOf="@id/btnCalculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnWeather"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_button"
        app:layout_constraintTop_toBottomOf="@id/btnList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout> 